--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -9,39 +9,39 @@ const stickyHeader = true;
 const menu = [
   {
     name: "Home",
-    url: "/",
+    url: "./",
   },
   {
     name: "About",
-    url: "/about",
+    url: "./about",
   },
   {
     name: "Docs",
-    url: "/docs",
+    url: "./docs",
   },
   {
     name: "Blog",
-    url: "/blog",
+    url: "./blog",
   },
   {
     name: "Recipes",
-    url: "/recipes",
+    url: "./recipes",
   },
   {
     name: "Poetry",
-    url: "/poetry",
+    url: "./poetry",
   },
   {
     name: "Index Cards",
-    url: "/index-cards",
+    url: "./index-cards",
   },
   {
     name: "Authors",
-    url: "/authors",
+    url: "./authors",
   },
   {
     name: "Portfolio",
-    url: "/portfolio",
+    url: "./portfolio",
   },
 ];
 ---
