--- a/src/components/common/Breadcrumbs.astro
+++ b/src/components/common/Breadcrumbs.astro
@@ -13,8 +13,7 @@ let parts = [
 ];
 
 paths.forEach((label: string, i: number) => {
-  const base = Astro.site.pathname.endsWith("/") ? Astro.site.pathname : `${Astro.site.pathname}/`;
-  const href = `${base}${paths.slice(0, i + 1).join("/")}`;
+  const href = `/${paths.slice(0, i + 1).join("/")}`;
   label !== "page" &&
     parts.push({
       label: lowerHumanize(label.replace(/[-_]/g, " ")) || "",
