--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -9,39 +9,39 @@ const stickyHeader = true;
 const menu = [
   {
     name: "Home",
-    url: "./",
+    url: "chagt-read/",
   },
   {
     name: "About",
-    url: "./about",
+    url: "chagt-read/about",
   },
   {
     name: "Docs",
-    url: "./docs",
+    url: "chagt-read/docs",
   },
   {
     name: "Blog",
-    url: "./blog",
+    url: "chagt-read/blog",
   },
   {
     name: "Recipes",
-    url: "./recipes",
+    url: "chagt-read/recipes",
   },
   {
     name: "Poetry",
-    url: "./poetry",
+    url: "chagt-read/poetry",
   },
   {
     name: "Index Cards",
-    url: "./index-cards",
+    url: "chagt-read/index-cards",
   },
   {
     name: "Authors",
-    url: "./authors",
+    url: "chagt-read/authors",
   },
   {
     name: "Portfolio",
-    url: "./portfolio",
+    url: "chagt-read/portfolio",
   },
 ];
 ---
