--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -92,7 +92,7 @@ const menu = [
     <div class="order-1 ml-auto flex items-center md:order-2 lg:ml-0">
       <a
         class="mr-4 inline-block border-border text-xl text-txt-p dark:border-darkmode-border dark:text-darkmode-txt-p"
-        href="/search"
+        href="/chagt-read/search"
         aria-label="search"
       >
         <IoSearch />
