--- a/src/components/poetry/CollectionLayout.astro
+++ b/src/components/poetry/CollectionLayout.astro
@@ -21,7 +21,7 @@ const { entryIndex, entries } = Astro.props;
             {
               entries.map((entry) => (
                 <li class="my-2">
-                  <a href={`/poetry/${entry.id}`}>
+                  <a href={`/chagt-read/poetry/${entry.id}`}>
                     <h4>{entry.data.title}</h4>
                   </a>
                 </li>
